--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+    <title>Incremental Clicker Name</title>
 </head>
+
 <body>
-Text
+    <span id="WhiteSpace" style="width:100%;height:5%"></span>
+    <span id="TitleColor" style="width:100%;height:15%">
+        <div id="TitleText">Incremental Clicker Name</div>
+    </span>
+    
 </body>
 </html>
