--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
 </head>
 
 <body>
-    <span id="WhiteSpace" style="width:100%;height:5%"></span>
-    <span id="TitleColor" style="width:100%;height:15%">
+    <span id="WhiteSpace" style="width:100%;height:5%;background-color:#FFFFFF;"></span>
+    <span id="TitleColor" style="width:100%;height:15%;background-color:#2533F5;">
         <div id="TitleText">Incremental Clicker Name</div>
     </span>
+
+<form method="post" action="PHP1.php">
+    Email: <input name="email" type="text" /><br />
+    Message:<br />
+    <textarea name="message" rows="15" cols="40">
+    </textarea><br />
+    <input type="submit" />
+</form>
     
 </body>
 </html>
